externalized importer calls